# wcolor

./: Cargo.toml  LICENSE  README.md
src/: color.rs  main.rs  preview.rs  win.rs
