[package]
name = "wcolor"
version = "0.1.4"
authors = ["Elvyria"]
description = "Lightweight color picker for Windows"
homepage = "https://github.com/Elvyria/wcolor"
repository = "https://github.com/Elvyria/wcolor"
readme = "README.md"
keywords = ["utility", "color-picker", "windows"]
categories = ["command-line-utilities"]
license = "MIT"
edition = "2021"

[dependencies]
structopt = "0.3"
wio = "0.2"
winapi = { version = "0.3", features = ["winuser", "stringapiset", "winnls", "impl-default", "dcomp", "d2d1", "d2d1_2", "d3d11", "dxgi1_2", "dxgi1_3"] }
